[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/Game.gd" type="Script" id=1]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/Wave.gd" type="Script" id=3]
[ext_resource path="res://Assets/pacfont-good-font/Pacfont-ZEBZ.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://scripts/Camera.gd" type="Script" id=5]
[ext_resource path="res://Assets/arcade_ya/ARCADE_N.TTF" type="DynamicFontData" id=6]
[ext_resource path="res://Assets/Ground Pixel (6).png" type="Texture" id=7]

[sub_resource type="DynamicFont" id=3]
size = 32
font_data = ExtResource( 6 )

[sub_resource type="Curve2D" id=1]
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 1332, -325.345, 0, 0, 0, 0, 1336, 894.216, 0, 0, 0, 0, -371, 897.208, 0, 0, 0, 0, -367, -328.336, 0, 0, 0, 0, 1329, -328.336 )
}

[sub_resource type="DynamicFont" id=2]
size = 36
outline_size = 1
outline_color = Color( 0.796078, 0.0509804, 0.0509804, 1 )
font_data = ExtResource( 4 )

[node name="Game" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" type="CanvasLayer" parent="."]
layer = -15

[node name="ColorRect" type="ColorRect" parent="Background"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2273.0
margin_top = -1627.0
margin_right = 2367.0
margin_bottom = 1456.0
color = Color( 0.356863, 0.964706, 0.396078, 1 )

[node name="Label" type="Label" parent="Background"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -227.0
margin_top = -41.0
margin_right = -10.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 3 )
text = "Wave:99
"
script = ExtResource( 3 )

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 315, 207 )

[node name="Path2D" type="Path2D" parent="Player"]
position = Vector2( -315, -206.738 )
scale = Vector2( 1, 1.00282 )
curve = SubResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="Player/Path2D"]
position = Vector2( 1332, -325.345 )
rotation = 1.56749

[node name="Ambiente" type="Node2D" parent="."]

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 515, 303 )
current = true
script = ExtResource( 5 )

[node name="Tween" type="Tween" parent="Camera2D"]
repeat = true
playback/repeat = true

[node name="Timer" type="Timer" parent="."]
wait_time = 1.8

[node name="GameOver" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="GameOver"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.756863 )

[node name="Label" type="Label" parent="GameOver/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -694.0
margin_top = -95.0
margin_right = -267.0
margin_bottom = -14.0
rect_scale = Vector2( 3.33168, 3.33168 )
custom_colors/font_color = Color( 0.184314, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 2 )
text = "   gAmE oVEr
   1 2345678888888888888888 9"

[node name="TextureRect" type="TextureRect" parent="."]
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -2880.0
margin_top = -1543.0
margin_right = 3560.0
margin_bottom = 2870.0
texture = ExtResource( 7 )
expand = true
stretch_mode = 7

[connection signal="health_is_over" from="Player" to="." method="_on_Player_health_is_over"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
